put comment around html

--- a/class03_201.md
+++ b/class03_201.md
@@ -2,24 +2,24 @@
 
 ## Lists
 
-### There are the types of list
+### There are three types of list
 
 - ordered list
-<ol>
+<!--<ol>
 <li></li>
-</ol>
+</ol>-->
 
 - unordered list
-<ol>
+<!--<ol>
 <li></li>
-</ol>
+</ol>-->
 
 - Definition List
-<dl>
+<!--<dl>
 <dt>
 <dd></dd>
 </dt>
-</dl>
+</dl>-->
 
 ## Box
 
