--- a/class07_201.md
+++ b/class07_201.md
@@ -1,1 +1,9 @@
+# Tables
+
+Tables are used for displaying data in a table format form.
+
+Basic Table structure
+
+<table>
+</table>
 [<== Back](README.md)
