--- a/class07_201.md
+++ b/class07_201.md
@@ -4,6 +4,8 @@ Tables are used for displaying data in a table format form.
 
 Basic Table structure
 
+<html>
 <table>
 </table>
+</html>
 [<== Back](README.md)
