--- a/class07_201.md
+++ b/class07_201.md
@@ -4,6 +4,6 @@ Tables are used for displaying data in a table format form.
 
 Basic Table structure
 
-'''<table> </table>'''
+     <table> </table>
 
 [<== Back](README.md)
