--- a/class07_201.md
+++ b/class07_201.md
@@ -4,6 +4,40 @@ Tables are used for displaying data in a table format form.
 
 Basic Table structure
 
-     <table> </table>
+     <table>
+        <tr>
+           <th>Title of Column</th>
+           <th>Title of Column</th>
+           <th>Title of Column</th>
+        </tr>
+        <tr>
+           <td>15</td>
+           <td>data</td>
+           <td>data</td>
+        </tr>
+        <tr>
+           <td>15</td>
+           <td>data</td>
+           <td>data</td>
+        </tr>
+     </table>
+
+### long Table contains
+
+        <thead></thead>
+        <tbody></tbody>
+        <tfoot></tfoot>
+
+### Method new
+
+- This creaes a new object.
+  var hotel=new object();
+
+        hotel.name='Quay';
+        hotel.rooms=40;
+        hotel.booked=25;
+        hotel. checkAvailability=function(){
+            return this.rooms-this.booked;
+        };
 
 [<== Back](README.md)
