added class 07 read

--- a/class07_201.md
+++ b/class07_201.md
@@ -40,4 +40,9 @@ Basic Table structure
             return this.rooms-this.booked;
         };
 
+        delete hotel.name;
+
+- The keyword this refer to the object or function on the ouside of this.
+- JavaScript has multiply built-in objects such as String, Number, Math and Date
+
 [<== Back](README.md)
