added CSS stylesheet

--- a/class08_201.md
+++ b/class08_201.md
@@ -24,4 +24,13 @@ Like adding some flavor to the blank HTML page.
   by using  
    /_<link href="Where ever the css at" type="text/css rel="stylesheet"_/
 
+## CSS Layout
+
+- position relative
+  Stays in position of normal flow but moves left, right, to or top
+- position absolute
+  taken out of normal flow and doesn't change surrounding elements.
+- position fixed
+  when user scrolll down stays in smae spot.
+
 [<== Back](README.md)
